fixed horizontal scroll issue for mojave os

--- a/ElectronMainApp/src/main/ui/css/style.css
+++ b/ElectronMainApp/src/main/ui/css/style.css
@@ -1,7 +1,7 @@
 /* Generated by less 2.5.1 */
 body {
-  overflow-y: auto;
-  overflow-x: hidden;
+  overflow-y: auto !important;
+  overflow-x: hidden !important;
 }
 #preloaderContainer {
   position: absolute;
